# bluethermometer

./: .gdbinit  .rustfmt.toml  Cargo.toml  README.md  ocd.cfg
.cargo/: config
src/: main.rs
