[package]
name = "bluethermometer"
version = "0.1.0"
authors = ["Greg V <greg@unrelenting.technology>"]
categories = ["embedded", "no-std"]
edition = "2018"
publish = false

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
debug = true
lto = true

[dependencies]
# rubble = { git = "https://github.com/jonas-schievink/rubble", default-features = false }
rubble = { git = "https://github.com/myfreeweb/rubble", branch = "nrf51-upd", default-features = false }
# rubble-nrf5x = { git = "https://github.com/jonas-schievink/rubble", features = ["51"] }
rubble-nrf5x = { git = "https://github.com/myfreeweb/rubble", branch = "nrf51-upd", features = ["51"] }
nrf51 = { git = "https://github.com/nrf-rs/nrf51", features = ["rt", "memory-aa"] }
nrf51-hal = { version = "0.7.1", features = ["rt"] }
cortex-m = "0.6.1"
cortex-m-rtfm = "0.5.1"
cortex-m-rt = "0.6.11"
byteorder = { version = "1.3.2", default-features = false }
fixed = "0.5.1"
panic-semihosting = "0.5"

[patch.crates-io]
nrf51 = { git = "https://github.com/nrf-rs/nrf51" }
